--- a/build-support/Cargo.toml
+++ b/build-support/Cargo.toml
@@ -9,3 +9,6 @@ flate2 = "1.1.2"
 tar = "0.4.44"
 cmake = "0.1.54"
 walkdir = "2.5.0"
+serde = { version = "1.0.228", features = ["derive"] }
+base64 = "0.22.1"
+serde_json = "1.0.145"
