--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,14 +105,14 @@ jobs:
           hdiutil attach -noverify -noautofsck $(basename $ONEAPI_INSTALLER_URL)
           sudo /Volumes/$(basename $ONEAPI_INSTALLER_URL .dmg)/bootstrapper.app/Contents/MacOS/bootstrapper --silent --eula accept --components intel.oneapi.mac.mkl.devel
 
-      - name: Patch CMakeLists.txt runtime flags
-        if: matrix.name == 'windows-x86_64'
-        shell: pwsh
-        run: |
-          (Get-Content CTranslate2/CMakeLists.txt) `
-            -replace 'MultiThreaded\$\<\$\<CONFIG:Debug\>:Debug\>', 'MultiThreaded$<$<CONFIG:Debug>:Debug>DLL' `
-            -replace '/MT', '/MD' |
-            Set-Content CTranslate2/CMakeLists.txt
+      # - name: Patch CMakeLists.txt runtime flags
+      #   if: matrix.name == 'windows-x86_64'
+      #   shell: pwsh
+      #   run: |
+      #     (Get-Content CTranslate2/CMakeLists.txt) `
+      #       -replace 'MultiThreaded\$\<\$\<CONFIG:Debug\>:Debug\>', 'MultiThreaded$<$<CONFIG:Debug>:Debug>DLL' `
+      #       -replace '/MT', '/MD' |
+      #       Set-Content CTranslate2/CMakeLists.txt
       - name: Install Intel MKL and OpenMP packages
         if: matrix.name == 'windows-x86_64'
         run: |
