--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         include:
           - name: linux-x86_64
             os: Linux
-            runs-on: ubuntu-22.04
+            runs-on: ubuntu-latest
             container: ubuntu:20.04
           - name: linux-arm64
             runs-on: ubuntu-24.04-arm
@@ -99,7 +99,6 @@ jobs:
       - name: Install dependencies (MacOS x86_64)
         if: matrix.name == 'macos-x86_64'
         run: |
-          brew install libomp
           ONEAPI_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/IRC_NAS/cd013e6c-49c4-488b-8b86-25df6693a9b7/m_BaseKit_p_2023.2.0.49398.dmg
           wget -q $ONEAPI_INSTALLER_URL
           hdiutil attach -noverify -noautofsck $(basename $ONEAPI_INSTALLER_URL)
