--- a/ctranslate2-src/Cargo.toml
+++ b/ctranslate2-src/Cargo.toml
@@ -21,6 +21,7 @@ tensor-parallel = []
 dnnl = []
 openmp-runtime-comp = []
 openmp-runtime-intel = []
+crt-dynamic = []
 msse4_1 = []
 os-defaults = []
 flash-attention = []
