--- a/build-support/Cargo.toml
+++ b/build-support/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "build-support"
+name = "ctranslate2-src-build-support"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 ureq = "3.1.2"
-flate2 = "1.1.2"
+flate2 = "1.1.3"
 tar = "0.4.44"
 cmake = "0.1.54"
 walkdir = "2.5.0"
