--- a/build-support/Cargo.toml
+++ b/build-support/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ctranslate2-src-build-support"
 version = "0.1.0"
 edition = "2024"
+description = "Build support for ctranslate2-src"
+license = "MIT"
 
 [dependencies]
 ureq = "3.1.2"
