--- a/ctranslate2-src/Cargo.toml
+++ b/ctranslate2-src/Cargo.toml
@@ -2,6 +2,8 @@
 name = "ctranslate2-src"
 version = "0.1.0"
 edition = "2024"
+description = "Compiles CTranslate2 from source or uses pre-built binaries"
+license = "MIT"
 
 [dependencies]
 
