--- a/ctranslate2-src/Cargo.toml
+++ b/ctranslate2-src/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "ctranslate2-src"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 description = "Compiles CTranslate2 from source or uses pre-built binaries"
 license = "MIT"
 exclude = ["CTranslate2-*/**"]
+links = "ctranslate2"
+
 [dependencies]
 
 [build-dependencies]
