--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [workspace]
 resolver = "2"
-members = ["ctranslate2-src", "build-support"]
-default-members = ["ctranslate2-src"]
+members = ["ctranslate2-sys", "build-support", "ctranslate2"]
+default-members = ["ctranslate2"]
 
 [workspace.dependencies]
 ctranslate2-src-build-support = { path = "build-support", version = "0.1.1" }
+ctranslate2-sys = { path = "ctranslate2-sys", version = "0.1.3" }
+sentencepiece = "0.12.0"
+tokenizers = "0.22.1"
+rust_tokenizers = "8.1.1"
